# multirobot_bvp_exploration

./: CMakeLists.txt  package.xml
coordinator/: CMakeLists.txt  package.xml
coordinator/include/: Coord.hpp  Map.hpp
coordinator/launch/: coordinator.launch
coordinator/src/: Coord.cpp  Map.cpp  main.cpp
exploration/: CMakeLists.txt  package.xml
navigation/: CMakeLists.txt  README.md  package.xml
navigation/include/: Navigator.h  PotentialGrid.h  Robot.h
navigation/launch/: bvp_exploration.launch  bvp_navigation.launch
navigation/src/: Navigator.cpp  PotentialGrid.cpp  Robot.cpp  main.cpp
